Change main to support Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_EXPORT_COMPILE_COMMANDS True)
 set(OpenGL_GL_PREFERENCE GLVND)
 
-find_package(Vulkan REQUIRED)
+# find_package(Vulkan REQUIRED)
 find_package(glm REQUIRED)
 find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
@@ -35,7 +35,7 @@ FetchContent_MakeAvailable(EnTT)
 # add_compile_options(-fsanitize=address)
 # add_link_options(-fsanitize=address)
 
-include_directories(${VULKAN_INCLUDE_DIRS})
+# include_directories(${VULKAN_INCLUDE_DIRS})
 include_directories(${SDL2_INCLUDE_DIRS})
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 include_directories(${SDL2_TTF_INCLUDE_DIRS})
