Move mesh to individual cpp files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${GLEW_INCLUDE_DIRS})
 
 include_directories(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/main)
-file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/main/*.cpp)
+file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/main/*.cpp)
 add_executable(PlatformerCpp ${SOURCES})
 target_link_libraries(PlatformerCpp ${SDL2_LIBRARIES})
 target_link_libraries(PlatformerCpp ${SDL2_IMAGE_LIBRARIES})
@@ -65,7 +65,7 @@ target_link_libraries(PlatformerCpp ${GLEW_LIBRARIES})
 target_link_libraries(PlatformerCpp EnTT::EnTT)
 target_link_libraries(PlatformerCpp assimp)
 
-file(GLOB TEST_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/test/*.cpp)
+file(GLOB_RECURSE TEST_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/test/*.cpp)
 add_executable(tests ${TEST_SOURCES})
 target_link_libraries(tests ${SDL2_LIBRARIES})
 target_link_libraries(tests ${SDL2_IMAGE_LIBRARIES})
