--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,9 +54,11 @@ include_directories(${GLM_INCLUDE_DIRS})
 include_directories(${OPENGL_INCLUDE_DIRS})
 include_directories(${GLEW_INCLUDE_DIRS})
 
+include_directories(${PROJECT_SOURCE_DIR}/imgui)
 include_directories(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/main)
+file(GLOB IMGUI_SOURCES ${PROJECT_SOURCE_DIR}/imgui/*.cpp ${PROJECT_SOURCE_DIR}/imgui/backends/imgui_impl_opengl3.cpp)
 file(GLOB_RECURSE SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/main/*.cpp)
-add_executable(PlatformerCpp ${SOURCES})
+add_executable(PlatformerCpp ${SOURCES} ${IMGUI_SOURCES})
 target_link_libraries(PlatformerCpp ${SDL2_LIBRARIES})
 target_link_libraries(PlatformerCpp ${SDL2_IMAGE_LIBRARIES})
 target_link_libraries(PlatformerCpp ${SDL2_TTF_LIBRARIES})
@@ -66,7 +68,7 @@ target_link_libraries(PlatformerCpp EnTT::EnTT)
 target_link_libraries(PlatformerCpp assimp)
 
 file(GLOB_RECURSE TEST_SOURCES ${PROJECT_SOURCE_DIR}/src/*.cpp ${PROJECT_SOURCE_DIR}/test/*.cpp)
-add_executable(tests ${TEST_SOURCES})
+add_executable(tests ${TEST_SOURCES} ${IMGUI_SOURCES})
 target_link_libraries(tests ${SDL2_LIBRARIES})
 target_link_libraries(tests ${SDL2_IMAGE_LIBRARIES})
 target_link_libraries(tests ${SDL2_TTF_LIBRARIES})
